<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginTop="@dimen/margen_qui"
        android:id="@+id/descripcionRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcionRegistro"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descripcionRegistro"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/input_nombreActividad"
        android:layout_marginTop="@dimen/margen_trein">
        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nom"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>





    <Button
        android:id="@+id/btn_guardar"
        android:text="@string/txt_btn_Save"
        android:textSize="@dimen/txt_size"
        android:background="@drawable/redondeado"
        android:layout_width="@dimen/dimen_wbutton"
        android:layout_height="@dimen/dimen_hbutton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margen_cuar" />

</RelativeLayout>