<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txtSincro"
        android:text="@string/sincro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_qui"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true" />
    <TextView
        android:id="@+id/txtSincro2"
        android:text="@string/sincro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSincro"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:id="@+id/btn_facebook"
        android:layout_width="@dimen/dimen_icono"
        android:layout_height="@dimen/dimen_icono"
        android:background="@drawable/facebook"
        android:layout_marginTop="@dimen/margen_veiC"
        android:layout_below="@+id/txtSincro2"
        android:layout_toLeftOf="@+id/txtSincro2"
        android:layout_toStartOf="@+id/txtSincro2" />
    <ImageButton
        android:id="@+id/btn_google"
        android:layout_width="@dimen/dimen_icono"
        android:layout_height="@dimen/dimen_icono"
        android:background="@drawable/google"
        android:layout_alignTop="@+id/btn_facebook"
        android:layout_toRightOf="@+id/txtSincro2"
        android:layout_toEndOf="@+id/txtSincro2" />

    <Button
        android:id="@+id/btn_continuar"
        android:text="@string/continuar"
        android:textSize="@dimen/txt_size"
        android:background="@drawable/redondeado"
        android:layout_width="@dimen/dimen_wbutton"
        android:layout_height="@dimen/dimen_hbutton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margen_cinc" />

</RelativeLayout>