<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_marginTop="@dimen/margen_qui"
        android:id="@+id/icono_logf"
        android:src="@drawable/facebook"
        android:layout_width="@dimen/dimen_icono"
        android:layout_height="@dimen/dimen_icono"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_usuario"
        android:layout_below="@id/icono_logf"
        android:layout_marginTop="@dimen/margen_die">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_usuario"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_password"
        android:layout_below="@id/input_usuario"
        android:layout_marginTop="@dimen/margen_die">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>



    <Button
        android:layout_marginTop="@dimen/margen_die"
        android:id="@+id/btn_continuar"
        android:text="@string/txt_btn_continuar"
        android:textSize="@dimen/tam_letra"
        android:background="@drawable/redondeado"
        android:layout_width="@dimen/dimen_wbutton"
        android:layout_height="@dimen/dimen_hbutton"
        android:layout_below="@+id/input_password"
        android:layout_centerHorizontal="true" />

</RelativeLayout>