<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClassRegistroActividad">



    <TextView
        android:id="@+id/descripcionRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcionRegistro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margen_ci"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_nombreActividad"
        android:layout_below="@id/descripcionRegistro"
        android:layout_marginTop="@dimen/margen_cinc">
        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>
    

    
    <!--<EditText
        android:id="@+id/input_fechaActividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/input_nombreActividad"
        android:layout_marginTop="20dp"
        android:hint="YYYY/MM/DD"
        android:inputType="date"/>-->

    <Button
        android:id="@+id/btn_guardar"
        android:text="@string/txt_btn_guardar"
        android:textSize="@dimen/tam_letra"
        android:background="@drawable/redondeado"
        android:layout_width="@dimen/dimen_wbutton"
        android:layout_height="@dimen/dimen_hbutton"
        android:layout_marginTop="@dimen/margen_ochF"
        android:layout_below="@+id/input_nombreActividad"
        android:layout_centerHorizontal="true" />
    

</RelativeLayout>
