<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ClasslogeoG">


    <ImageView
        android:id="@+id/icono_logg"
        android:src="@drawable/google"
        android:layout_width="@dimen/dimen_icono"
        android:layout_height="@dimen/dimen_icono"
        android:layout_marginTop="@dimen/margen_ci"
        android:layout_centerHorizontal="true"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_usuario"
        android:layout_below="@id/icono_logg"
        android:layout_marginTop="@dimen/margin_t">

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_usuario"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_password"
        android:layout_below="@id/input_usuario"
        android:layout_marginTop="@dimen/margin_t">
        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
          />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_continuar"
        android:text="@string/txt_btn_continuar"
        android:textSize="@dimen/tam_letra"
        android:background="@drawable/redondeado"
        android:layout_width="@dimen/dimen_wbutton"
        android:layout_height="@dimen/dimen_hbutton"
        android:layout_below="@+id/input_password"
        android:layout_marginTop="@dimen/dimen_med"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
