<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Classlogeo">

    <TextView
        android:id="@+id/txtSincro"
        android:text="@string/sincro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margen_ci"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txtSincro2"
        android:text="@string/sincro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtSincro"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <!--android.support.v7.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btn_facebook"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/txtSincro2"
        android:layout_centerHorizontal="true"
        >
        <ImageButton
        android:layout_width="@dimen/dimen_icono"
        android:layout_height="@dimen/dimen_icono"
        android:background="@drawable/facebook"
         />


    </android.support.v7.widget.CardView-->

    <ImageButton
        android:id="@+id/btn_facebook"
        android:layout_width="@dimen/dimen_icono"
        android:layout_height="@dimen/dimen_icono"
        android:background="@drawable/facebook"
        android:layout_marginTop="@dimen/dimen_icono"
        android:layout_below="@+id/txtSincro2"
        android:layout_centerHorizontal="true"/>


    <ImageButton
        android:id="@+id/btn_google"
        android:layout_width="@dimen/dimen_icono"
        android:layout_height="@dimen/dimen_icono"
        android:background="@drawable/google"
        android:layout_marginTop="@dimen/margin_t"
        android:layout_below="@+id/btn_facebook"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>


    <Button
        android:id="@+id/btn_continuar"
        android:text="@string/txt_btn_continuar"
        android:textSize="@dimen/tam_letra"
        android:background="@drawable/redondeado"
        android:layout_width="@dimen/dimen_wbutton"
        android:layout_height="@dimen/dimen_hbutton"
        android:layout_below="@+id/btn_google"
        android:layout_marginTop="@dimen/dimen_hbutton"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
